[package]
name = "smoldot-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2-rfc = { version = "0.2.18", default-features = false }
	derive_more = "0.99.17"
	either = { version = "1.8.0", default-features = false }
	event-listener = { version = "2.5.3" }
	fnv = { version = "1.0.7", default-features = false }
	futures = "0.3.25"
	hashbrown = { version = "0.13.1", default-features = false }
	hex = { version = "0.4.3", default-features = false }
	itertools = "0.10.5"
	log = { version = "0.4.17", default-features = false }
	lru = { version = "0.8.1", default-features = false }  # TODO: there's no way to use a custom hasher; remove this dependency
	rand = "0.8.5"
	serde = { version = "1.0.148", default-features = false, features = ["alloc", "derive"] }
	serde_json = "1.0.89"
	slab = { version = "0.4.7", default-features = false }
	smoldot = { version = "0.5.0",  default-features = false }
  smoldot-light = { version = "0.3.0"}
	
	env_logger = "0.10.0"
	# `std` feature
	# Add here the crates that cannot function without the help of the operating system or environment.
	async-std = { version = "1.12.0", optional = true }
	parking_lot = { version = "0.12.1", optional = true }
	
	[features]
	default = ["std"]
	std = ["async-std", "parking_lot", "smoldot/std"]
	
	[dev-dependencies]
